--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-feature_9_2075728867.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-feature_9_2075728867.html
@@ -41,7 +41,7 @@ $(document).ready(function() {
 
 
 
-<title>Cucumber Reports (no 1) - Tag: @SuccessfulOrder2</title>
+<title>Cucumber Reports (no 1) - Feature: Search</title>
 
 </head>
 <body>
@@ -89,7 +89,7 @@ $(document).ready(function() {
 
 <div id="report-lead" class="container-fluid">
   <div class="col-md-10 col-md-offset-1">
-    <h2>Tag Report</h2>
+    <h2>Feature Report</h2>
   </div>
 </div>
 
@@ -108,7 +108,7 @@ $(document).ready(function() {
     <th colspan="2">Features</th>
   </tr>
   <tr>
-    <th>Tag</th>
+    <th>Feature</th>
     <th class="passed">Passed</th>
     <th class="failed">Failed</th>
     <th class="skipped">Skipped</th>
@@ -128,7 +128,7 @@ $(document).ready(function() {
 
         <tbody>
         <tr>
-          <td class="tagname">@SuccessfulOrder2</td>
+          <td class="tagname">Search</td>
           <td      class="passed"    >4</td>
           <td >0</td>
           <td >0</td>
@@ -140,7 +140,7 @@ $(document).ready(function() {
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="12983789500">12.983</td>
+          <td class="duration" data-value="6102096100">6.102</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -167,30 +167,38 @@ $(document).ready(function() {
 <div class="container-fluid" id="report">
   <div class="row">
     <div class="col-md-10 col-md-offset-1">
-      <div class="elements">
-
-
-<div class="element">
-    <div class="indention">
-      <b>Feature:</b>
-      <a href="report-feature_7_520669101.html">Fow Order 2</a>
-    </div>
-
+      <div class="feature">
 
 <div class="tags indention">
-    <b>Tags:</b>
-       <a href="report-tag_2279465533.html">@SuccessfulOrder2</a>
 </div>
 
 
-  <span class="lead-duration duration">12.983</span>
+<div class="brief passed">
+  <span class="keyword indention">Feature</span>
+  <span class="name">Search</span>
+
+
+</div>
+
+        <div class="description indention"></div>
+
+        <div class="elements inner-level">
+
+<div class="element">
+
+
+<div class="tags indention">
+</div>
+
+
+  <span class="lead-duration duration">6.102</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
 
 <div class="brief passed">
   <span class="keyword indention">Scenario Outline</span>
-  <span class="name">Successful Fow Order 2</span>
+  <span class="name">Search Products</span>
 
 
      <i class="chevron fa fa-fw"></i>
@@ -256,9 +264,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-Given passed">
   <span class="keyword indention">Given</span>
-  <span class="name">select product <span class="argument">&quot;&#273;&#7891;ng h&#7891;&quot;</span> to order</span>
+  <span class="name">user redirect to index page <span class="argument">&quot;http://localhost:5173/index/products&quot;</span></span>
 
-  <span class="lead-duration duration">3.980</span>
+  <span class="lead-duration duration">3.807</span>
 
 </div>
 
@@ -327,7 +335,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.001</span>
+  <span class="lead-duration duration">0.000</span>
 
           </div>
 
@@ -347,9 +355,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-When passed">
   <span class="keyword indention">When</span>
-  <span class="name">user input address is <span class="argument">&quot;S&#7889; nh&agrave; 32&quot;</span>, <span class="argument">&quot;Th&agrave;nh ph&#7889; C&#7847;n Th&#417;&quot;</span>, <span class="argument">&quot;Qu&#7853;n Ninh Ki&#7873;u&quot;</span>, <span class="argument">&quot;Ph&#432;&#7901;ng An H&ograve;a&quot;</span>, <span class="argument">&quot;Cho ki&#7875;m tra h&agrave;ng&quot;</span></span>
+  <span class="name">user enter search value: <span class="argument">&quot;&#272;i&#7879;n tr&#7903;&quot;</span></span>
 
-  <span class="lead-duration duration">5.826</span>
+  <span class="lead-duration duration">0.147</span>
 
 </div>
 
@@ -438,9 +446,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-And passed">
   <span class="keyword indention">And</span>
-  <span class="name">click submit button</span>
+  <span class="name">click search button</span>
 
-  <span class="lead-duration duration">2.051</span>
+  <span class="lead-duration duration">1.016</span>
 
 </div>
 
@@ -529,9 +537,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-Then passed">
   <span class="keyword indention">Then</span>
-  <span class="name">user should see an order success message <span class="argument">&quot;&#272;&#7863;t h&agrave;ng th&agrave;nh c&ocirc;ng&quot;</span></span>
+  <span class="name">user should see list products with name include <span class="argument">&quot;&#272;i&#7879;n tr&#7903;&quot;</span></span>
 
-  <span class="lead-duration duration">1.124</span>
+  <span class="lead-duration duration">1.130</span>
 
 </div>
 
@@ -640,7 +648,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.724</span>
+  <span class="lead-duration duration">0.666</span>
 
           </div>
 
@@ -657,6 +665,7 @@ $(document).ready(function() {
   </div>
 </div>
 
+        </div>
 
       </div>
     </div>
