--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_2427194533.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_2427194533.html
@@ -74,9 +74,9 @@ $(document).ready(function() {
   </thead>
   <tbody>
     <tr class="info">
-      <td>CucumberTestNG022023</td>
+      <td>TMDT</td>
         <td>1</td>
-      <td>17 Oct 2023, 22:27</td>
+      <td>28 Oct 2023, 21:48</td>
     </tr>
   </tbody>
 </table>
@@ -140,7 +140,7 @@ $(document).ready(function() {
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="8498305200">8.498</td>
+          <td class="duration" data-value="4271456500">4.271</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -173,7 +173,7 @@ $(document).ready(function() {
 <div class="element">
     <div class="indention">
       <b>Feature:</b>
-      <a href="report-feature_5_4196646110.html">Register</a>
+      <a href="report-feature_8_4196646110.html">Register</a>
     </div>
 
 
@@ -183,7 +183,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">8.498</span>
+  <span class="lead-duration duration">4.271</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
@@ -258,7 +258,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to register page <span class="argument">&quot;http://localhost:5173/register&quot;</span></span>
 
-  <span class="lead-duration duration">6.294</span>
+  <span class="lead-duration duration">1.759</span>
 
 </div>
 
@@ -349,7 +349,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter name: <span class="argument">&quot;Hu&#7923;nh V&#259;n B&aacute;&quot;</span>, phone: <span class="argument">&quot;&quot;</span> email <span class="argument">&quot;vanba@gmail.com&quot;</span> and password: <span class="argument">&quot;123&quot;</span></span>
 
-  <span class="lead-duration duration">0.125</span>
+  <span class="lead-duration duration">0.405</span>
 
 </div>
 
@@ -440,7 +440,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click register button</span>
 
-  <span class="lead-duration duration">2.039</span>
+  <span class="lead-duration duration">2.061</span>
 
 </div>
 
@@ -531,7 +531,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an error phone message <span class="argument">&quot;B&#7855;t bu&#7897;c &#273;i&#7873;n s&#7889; &#273;i&#7879;n tho&#7841;i &#273;&uacute;ng &#273;&#7883;nh d&#7841;ng&quot;</span></span>
 
-  <span class="lead-duration duration">0.038</span>
+  <span class="lead-duration duration">0.045</span>
 
 </div>
 
@@ -640,7 +640,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">1.065</span>
+  <span class="lead-duration duration">0.650</span>
 
           </div>
 
