--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_2709156447.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_2709156447.html
@@ -41,7 +41,7 @@ $(document).ready(function() {
 
 
 
-<title>Cucumber Reports (no 1) - Tag: @SuccessfulOrder2</title>
+<title>Cucumber Reports (no 1) - Tag: @EmptyProductCategory</title>
 
 </head>
 <body>
@@ -128,19 +128,19 @@ $(document).ready(function() {
 
         <tbody>
         <tr>
-          <td class="tagname">@SuccessfulOrder2</td>
-          <td      class="passed"    >4</td>
+          <td class="tagname">@EmptyProductCategory</td>
+          <td      class="passed"    >3</td>
           <td >0</td>
           <td >0</td>
           <td >0</td>
           <td >0</td>
-          <td class="total">4</td>
+          <td class="total">3</td>
 
           <td  class="passed"    >1</td>
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="12983789500">12.983</td>
+          <td class="duration" data-value="2241995700">2.241</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -173,24 +173,24 @@ $(document).ready(function() {
 <div class="element">
     <div class="indention">
       <b>Feature:</b>
-      <a href="report-feature_7_520669101.html">Fow Order 2</a>
+      <a href="report-feature_1_2716132006.html">Admin Create New Product</a>
     </div>
 
 
 <div class="tags indention">
     <b>Tags:</b>
-       <a href="report-tag_2279465533.html">@SuccessfulOrder2</a>
+       <a href="report-tag_2709156447.html">@EmptyProductCategory</a>
 </div>
 
 
-  <span class="lead-duration duration">12.983</span>
+  <span class="lead-duration duration">2.241</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
 
 <div class="brief passed">
-  <span class="keyword indention">Scenario Outline</span>
-  <span class="name">Successful Fow Order 2</span>
+  <span class="keyword indention">Scenario</span>
+  <span class="name">Empty Product Category</span>
 
 
      <i class="chevron fa fa-fw"></i>
@@ -256,9 +256,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-Given passed">
   <span class="keyword indention">Given</span>
-  <span class="name">select product <span class="argument">&quot;&#273;&#7891;ng h&#7891;&quot;</span> to order</span>
+  <span class="name">user click add new product button</span>
 
-  <span class="lead-duration duration">3.980</span>
+  <span class="lead-duration duration">1.067</span>
 
 </div>
 
@@ -327,7 +327,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.001</span>
+  <span class="lead-duration duration">0.000</span>
 
           </div>
 
@@ -347,9 +347,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-When passed">
   <span class="keyword indention">When</span>
-  <span class="name">user input address is <span class="argument">&quot;S&#7889; nh&agrave; 32&quot;</span>, <span class="argument">&quot;Th&agrave;nh ph&#7889; C&#7847;n Th&#417;&quot;</span>, <span class="argument">&quot;Qu&#7853;n Ninh Ki&#7873;u&quot;</span>, <span class="argument">&quot;Ph&#432;&#7901;ng An H&ograve;a&quot;</span>, <span class="argument">&quot;Cho ki&#7875;m tra h&agrave;ng&quot;</span></span>
+  <span class="name">submit click add new product button</span>
 
-  <span class="lead-duration duration">5.826</span>
+  <span class="lead-duration duration">1.085</span>
 
 </div>
 
@@ -436,11 +436,11 @@ $(document).ready(function() {
       <div class="step">
 
 
-<div class="brief step-name-And passed">
-  <span class="keyword indention">And</span>
-  <span class="name">click submit button</span>
+<div class="brief step-name-Then passed">
+  <span class="keyword indention">Then</span>
+  <span class="name">user should see an error name message bellow textbox product category <span class="argument">&quot;B&#7855;t bu&#7897;c ch&#7885;n danh m&#7909;c&quot;</span></span>
 
-  <span class="lead-duration duration">2.051</span>
+  <span class="lead-duration duration">0.089</span>
 
 </div>
 
@@ -524,97 +524,6 @@ $(document).ready(function() {
   </div>
 
       </div>
-      <div class="step">
-
-
-<div class="brief step-name-Then passed">
-  <span class="keyword indention">Then</span>
-  <span class="name">user should see an order success message <span class="argument">&quot;&#272;&#7863;t h&agrave;ng th&agrave;nh c&ocirc;ng&quot;</span></span>
-
-  <span class="lead-duration duration">1.124</span>
-
-</div>
-
-
-
-  <div class="inner-level hooks-step-before">
-    <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#before-10">
-
-<div class="brief passed">
-  <span class="keyword indention">Hooks</span>
-  <span class="name"></span>
-
-
-     <i class="chevron fa fa-fw"></i>
-</div>
-
-    </div>
-
-    <div id="before-10" class="inner-level collapse collapsable-details ">
-        <div class="hook">
-          <div class="brief passed">
-            <span class="keyword indention">Before</span>
-              <span class="location name">hooks.CucumberHooks.beforeStep(io.cucumber.java.Scenario)</span>
-
-  <span class="lead-duration duration">0.000</span>
-
-          </div>
-
-
-
-
-
-
-
-        </div>
-    </div>
-  </div>
-
-
-
-
-
-
-
-
-
-
-
-
-  <div class="inner-level hooks-step-after">
-    <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#after-11">
-
-<div class="brief passed">
-  <span class="keyword indention">Hooks</span>
-  <span class="name"></span>
-
-
-     <i class="chevron fa fa-fw"></i>
-</div>
-
-    </div>
-
-    <div id="after-11" class="inner-level collapse collapsable-details ">
-        <div class="hook">
-          <div class="brief passed">
-            <span class="keyword indention">After</span>
-              <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
-
-  <span class="lead-duration duration">0.000</span>
-
-          </div>
-
-
-
-
-
-
-
-        </div>
-    </div>
-  </div>
-
-      </div>
   </div>
 </div>
 
@@ -622,7 +531,7 @@ $(document).ready(function() {
 
 
   <div class="inner-level hooks-element-after">
-    <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#after-12">
+    <div data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#after-10">
 
 <div class="brief passed">
   <span class="keyword indention">Hooks</span>
@@ -634,13 +543,13 @@ $(document).ready(function() {
 
     </div>
 
-    <div id="after-12" class="inner-level collapse collapsable-details ">
+    <div id="after-10" class="inner-level collapse collapsable-details ">
         <div class="hook">
           <div class="brief passed">
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.724</span>
+  <span class="lead-duration duration">0.677</span>
 
           </div>
 
