--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_2804680149.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_2804680149.html
@@ -41,7 +41,7 @@ $(document).ready(function() {
 
 
 
-<title>Cucumber Reports (no 1) - Tag: @SuccessfulOrder2</title>
+<title>Cucumber Reports (no 1) - Tag: @SuccessfulAddNewProduct</title>
 
 </head>
 <body>
@@ -128,7 +128,7 @@ $(document).ready(function() {
 
         <tbody>
         <tr>
-          <td class="tagname">@SuccessfulOrder2</td>
+          <td class="tagname">@SuccessfulAddNewProduct</td>
           <td      class="passed"    >4</td>
           <td >0</td>
           <td >0</td>
@@ -140,7 +140,7 @@ $(document).ready(function() {
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="12983789500">12.983</td>
+          <td class="duration" data-value="15512371800">15.512</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -173,24 +173,24 @@ $(document).ready(function() {
 <div class="element">
     <div class="indention">
       <b>Feature:</b>
-      <a href="report-feature_7_520669101.html">Fow Order 2</a>
+      <a href="report-feature_1_2716132006.html">Admin Create New Product</a>
     </div>
 
 
 <div class="tags indention">
     <b>Tags:</b>
-       <a href="report-tag_2279465533.html">@SuccessfulOrder2</a>
+       <a href="report-tag_2804680149.html">@SuccessfulAddNewProduct</a>
 </div>
 
 
-  <span class="lead-duration duration">12.983</span>
+  <span class="lead-duration duration">15.512</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
 
 <div class="brief passed">
   <span class="keyword indention">Scenario Outline</span>
-  <span class="name">Successful Fow Order 2</span>
+  <span class="name">Add New Product</span>
 
 
      <i class="chevron fa fa-fw"></i>
@@ -256,9 +256,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-Given passed">
   <span class="keyword indention">Given</span>
-  <span class="name">select product <span class="argument">&quot;&#273;&#7891;ng h&#7891;&quot;</span> to order</span>
+  <span class="name">user click add new product button</span>
 
-  <span class="lead-duration duration">3.980</span>
+  <span class="lead-duration duration">1.033</span>
 
 </div>
 
@@ -327,7 +327,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.001</span>
+  <span class="lead-duration duration">0.000</span>
 
           </div>
 
@@ -347,9 +347,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-When passed">
   <span class="keyword indention">When</span>
-  <span class="name">user input address is <span class="argument">&quot;S&#7889; nh&agrave; 32&quot;</span>, <span class="argument">&quot;Th&agrave;nh ph&#7889; C&#7847;n Th&#417;&quot;</span>, <span class="argument">&quot;Qu&#7853;n Ninh Ki&#7873;u&quot;</span>, <span class="argument">&quot;Ph&#432;&#7901;ng An H&ograve;a&quot;</span>, <span class="argument">&quot;Cho ki&#7875;m tra h&agrave;ng&quot;</span></span>
+  <span class="name">user input product information <span class="argument">&quot;T&#7909; g&#7889;m 104&quot;</span>, <span class="argument">&quot;s&#7843;n ph&#7849;m m&#7899;i nh&#7845;t c&#7911;a c&#7917;a h&agrave;ng&quot;</span>, <span class="argument">&quot;150000&quot;</span>, <span class="argument">&quot;T&#7909; &#273;i&#7879;n&quot;</span>, <span class="argument">&quot;150&quot;</span> , <span class="argument">&quot;2023/10/10&quot;</span> and path image <span class="argument">&quot;F:\LuanVan\104pi.jpg&quot;</span></span>
 
-  <span class="lead-duration duration">5.826</span>
+  <span class="lead-duration duration">13.138</span>
 
 </div>
 
@@ -438,9 +438,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-And passed">
   <span class="keyword indention">And</span>
-  <span class="name">click submit button</span>
+  <span class="name">submit click add new product button</span>
 
-  <span class="lead-duration duration">2.051</span>
+  <span class="lead-duration duration">1.046</span>
 
 </div>
 
@@ -529,9 +529,9 @@ $(document).ready(function() {
 
 <div class="brief step-name-Then passed">
   <span class="keyword indention">Then</span>
-  <span class="name">user should see an order success message <span class="argument">&quot;&#272;&#7863;t h&agrave;ng th&agrave;nh c&ocirc;ng&quot;</span></span>
+  <span class="name">the list product page display new product on top list products with name is <span class="argument">&quot;T&#7909; g&#7889;m 104&quot;</span></span>
 
-  <span class="lead-duration duration">1.124</span>
+  <span class="lead-duration duration">0.293</span>
 
 </div>
 
@@ -640,7 +640,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.724</span>
+  <span class="lead-duration duration">0.733</span>
 
           </div>
 
