--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_919029063.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_919029063.html
@@ -74,9 +74,9 @@ $(document).ready(function() {
   </thead>
   <tbody>
     <tr class="info">
-      <td>CucumberTestNG022023</td>
+      <td>TMDT</td>
         <td>1</td>
-      <td>17 Oct 2023, 22:27</td>
+      <td>28 Oct 2023, 21:48</td>
     </tr>
   </tbody>
 </table>
@@ -140,7 +140,7 @@ $(document).ready(function() {
           <td >0</td>
           <td class="total">1</td>
 
-          <td class="duration" data-value="7804395300">7.804</td>
+          <td class="duration" data-value="3682219700">3.682</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -173,7 +173,7 @@ $(document).ready(function() {
 <div class="element">
     <div class="indention">
       <b>Feature:</b>
-      <a href="report-feature_1_965572540.html">Login</a>
+      <a href="report-feature_4_965572540.html">Login</a>
     </div>
 
 
@@ -183,7 +183,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">7.804</span>
+  <span class="lead-duration duration">3.682</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
@@ -221,7 +221,7 @@ $(document).ready(function() {
             <span class="keyword indention">Before</span>
               <span class="location name">hooks.CucumberHooks.beforeScenario()</span>
 
-  <span class="lead-duration duration">0.000</span>
+  <span class="lead-duration duration">0.001</span>
 
           </div>
 
@@ -258,7 +258,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to Login page <span class="argument">&quot;http://localhost:5173/login&quot;</span></span>
 
-  <span class="lead-duration duration">5.661</span>
+  <span class="lead-duration duration">1.372</span>
 
 </div>
 
@@ -349,7 +349,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter email <span class="argument">&quot;helloword@gmail.com&quot;</span> and password: <span class="argument">&quot;123&quot;</span></span>
 
-  <span class="lead-duration duration">1.078</span>
+  <span class="lead-duration duration">1.216</span>
 
 </div>
 
@@ -440,7 +440,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click login button</span>
 
-  <span class="lead-duration duration">1.033</span>
+  <span class="lead-duration duration">1.041</span>
 
 </div>
 
@@ -531,7 +531,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an error login message <span class="argument">&quot;Sai t&ecirc;n &#273;&#259;ng nh&#7853;p ho&#7863;c m&#7853;t kh&#7849;u !&quot;</span></span>
 
-  <span class="lead-duration duration">0.030</span>
+  <span class="lead-duration duration">0.051</span>
 
 </div>
 
@@ -640,7 +640,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.988</span>
+  <span class="lead-duration duration">0.665</span>
 
           </div>
 
