--- a/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_980156514.html
+++ b/reports/CucumberReports/cucumber-reports/cucumber-html-reports/report-tag_980156514.html
@@ -74,9 +74,9 @@ $(document).ready(function() {
   </thead>
   <tbody>
     <tr class="info">
-      <td>CucumberTestNG022023</td>
+      <td>TMDT</td>
         <td>1</td>
-      <td>17 Oct 2023, 22:27</td>
+      <td>28 Oct 2023, 21:48</td>
     </tr>
   </tbody>
 </table>
@@ -140,7 +140,7 @@ $(document).ready(function() {
           <td >0</td>
           <td class="total">2</td>
 
-          <td class="duration" data-value="15780089800">15.780</td>
+          <td class="duration" data-value="8719461400">8.719</td>
           <td class="passed">Passed</td>
         </tr>
         </tbody>
@@ -173,7 +173,7 @@ $(document).ready(function() {
 <div class="element">
     <div class="indention">
       <b>Feature:</b>
-      <a href="report-feature_1_965572540.html">Login</a>
+      <a href="report-feature_4_965572540.html">Login</a>
     </div>
 
 
@@ -183,7 +183,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">7.845</span>
+  <span class="lead-duration duration">3.669</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-1">
@@ -258,7 +258,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to Login page <span class="argument">&quot;http://localhost:5173/login&quot;</span></span>
 
-  <span class="lead-duration duration">5.690</span>
+  <span class="lead-duration duration">1.384</span>
 
 </div>
 
@@ -327,7 +327,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.001</span>
+  <span class="lead-duration duration">0.000</span>
 
           </div>
 
@@ -349,7 +349,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter email <span class="argument">&quot;abcgmail.com&quot;</span> and password: <span class="argument">&quot;&quot;</span></span>
 
-  <span class="lead-duration duration">1.080</span>
+  <span class="lead-duration duration">1.204</span>
 
 </div>
 
@@ -374,7 +374,7 @@ $(document).ready(function() {
             <span class="keyword indention">Before</span>
               <span class="location name">hooks.CucumberHooks.beforeStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.000</span>
+  <span class="lead-duration duration">0.001</span>
 
           </div>
 
@@ -531,7 +531,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an error password message <span class="argument">&quot;B&#7855;t bu&#7897;c nh&#7853;p m&#7853;t kh&#7849;u !&quot;</span></span>
 
-  <span class="lead-duration duration">0.039</span>
+  <span class="lead-duration duration">0.046</span>
 
 </div>
 
@@ -640,7 +640,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">1.053</span>
+  <span class="lead-duration duration">0.659</span>
 
           </div>
 
@@ -661,7 +661,7 @@ $(document).ready(function() {
 <div class="element">
     <div class="indention">
       <b>Feature:</b>
-      <a href="report-feature_5_4196646110.html">Register</a>
+      <a href="report-feature_8_4196646110.html">Register</a>
     </div>
 
 
@@ -671,7 +671,7 @@ $(document).ready(function() {
 </div>
 
 
-  <span class="lead-duration duration">7.934</span>
+  <span class="lead-duration duration">5.049</span>
 
 
   <span data-toggle="collapse" class=" collapsed  collapsable-control" data-target="#element-13">
@@ -746,7 +746,7 @@ $(document).ready(function() {
   <span class="keyword indention">Given</span>
   <span class="name">user navigate to register page <span class="argument">&quot;http://localhost:5173/register&quot;</span></span>
 
-  <span class="lead-duration duration">5.757</span>
+  <span class="lead-duration duration">2.515</span>
 
 </div>
 
@@ -837,7 +837,7 @@ $(document).ready(function() {
   <span class="keyword indention">When</span>
   <span class="name">user enter name: <span class="argument">&quot;Hu&#7923;nh V&#259;n B&aacute;&quot;</span>, phone: <span class="argument">&quot;0562147852&quot;</span> email <span class="argument">&quot;vanba@gmail.com&quot;</span> and password: <span class="argument">&quot;&quot;</span></span>
 
-  <span class="lead-duration duration">0.113</span>
+  <span class="lead-duration duration">0.403</span>
 
 </div>
 
@@ -928,7 +928,7 @@ $(document).ready(function() {
   <span class="keyword indention">And</span>
   <span class="name">click register button</span>
 
-  <span class="lead-duration duration">2.027</span>
+  <span class="lead-duration duration">2.068</span>
 
 </div>
 
@@ -1019,7 +1019,7 @@ $(document).ready(function() {
   <span class="keyword indention">Then</span>
   <span class="name">user should see an error password message <span class="argument">&quot;B&#7855;t bu&#7897;c &#273;i&#7873;n m&#7853;t kh&#7849;u t&#7889;i &#273;a 255 k&yacute; t&#7921;&quot;</span></span>
 
-  <span class="lead-duration duration">0.036</span>
+  <span class="lead-duration duration">0.061</span>
 
 </div>
 
@@ -1044,7 +1044,7 @@ $(document).ready(function() {
             <span class="keyword indention">Before</span>
               <span class="location name">hooks.CucumberHooks.beforeStep(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">0.001</span>
+  <span class="lead-duration duration">0.000</span>
 
           </div>
 
@@ -1128,7 +1128,7 @@ $(document).ready(function() {
             <span class="keyword indention">After</span>
               <span class="location name">hooks.CucumberHooks.afterScenario(io.cucumber.java.Scenario)</span>
 
-  <span class="lead-duration duration">1.032</span>
+  <span class="lead-duration duration">0.672</span>
 
           </div>
 
